fixed overflow issue on post footer

--- a/src/app/components/post/PostFooter.module.css
+++ b/src/app/components/post/PostFooter.module.css
@@ -15,6 +15,7 @@
     align-items: center;
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 
 .post_interactions{
@@ -25,7 +26,6 @@
 
 .mod_interactions{
     margin: auto 0 auto auto;
-    background-color: white;
     border: none;
     color: black;
     text-align: center;
